--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(/Kursovaya/background.jpg);
+    background-image: url(/background.jpg);
     background-size: cover;
     font-family: 'Oswald', sans-serif;
     color:white;
