--- a/index.css
+++ b/index.css
@@ -146,21 +146,33 @@ input[type="submit"] {
     text-align: center;
     padding-top: 50px;
     border-radius: 10px;
+    background-image: url(/лапка_котика.gif);
+    background-size: 20%;
+    background-repeat: no-repeat;
+    background-position-x: right;
+    background-position-y: bottom;
 }
 
 #modal_about{
     width: 400px;
-    height:200px;
-    padding: 20px;
+    height:330px;
+    padding: 30px;
     border:solid 2px #ffffff;
     background-color: #4d7abd;
     color: rgb(255, 255, 255);
     position:absolute; 
     left:430px; 
-    top:200px;
+    top:100px;
     text-align: left;
-    padding-top: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     border-radius: 10px;
+    background-image: url(/котик.gif);
+    background-size: 20%;
+    background-repeat: no-repeat;
+    background-position-x: right;
+    background-position-y: bottom;
+
 }
 
 .btn_modal{
@@ -171,15 +183,12 @@ input[type="submit"] {
     letter-spacing: 1px;
     font-size: 16px;
     color :#fff ; 
-    /* background-color: #4781ffd2;  */
     background: linear-gradient(to left, #ff7571, #1565C0,#ff7571);
     background-size: 200%;
     cursor: pointer; 
-    margin-left: 12px;
     transition: 0.5s;
 }
 
 .btn_modal:hover{
-    /* background-color: rgb(255, 120, 58);  */
     background-position: right;
 }
