--- a/css_file/map.css
+++ b/css_file/map.css
@@ -1,3 +1,7 @@
+html{
+    width: 1326px;
+}
+
 body{
     background-image: url(/picture/background.jpg);
     background-size: cover;
@@ -54,6 +58,19 @@ main{
     letter-spacing: 1px; 
     background-color: #1b59b6c7;
 }
+
+.container2{
+    width: 450px; 
+    padding: 32px;
+    border-radius: 10px; 
+    box-shadow: 0 4px 16px #ccc;
+    letter-spacing: 1px; 
+    background-color: #1b59b6c7;
+    margin-right: 90px;
+    margin-top: 50px;
+}
+
+
 
 .card-header{
     font-size: 30px;
@@ -217,6 +234,26 @@ main{
     background-position-y: bottom;
 }
 
+#modal_window2{
+    width: 400px;
+    height:90px;
+    padding: 20px;
+    border:solid 2px #ffffff;
+    background-color: #4d7abd;
+    color: rgb(255, 255, 255);
+    position:absolute; 
+    left:440px; 
+    top:200px;
+    text-align: center;
+    padding-top: 50px;
+    border-radius: 10px;
+    background-image: url(/picture/лапка_котика.gif);
+    background-size: 20%;
+    background-repeat: no-repeat;
+    background-position-x: right;
+    background-position-y: bottom;
+}
+
 #modal_about{
     width: 400px;
     height:330px;
@@ -240,7 +277,7 @@ main{
 
 .btn_modal{
     padding: 10px 20px;
-    margin-top: 10px;
+    margin-top: 30px;
     border: none; 
     border-radius: 5px; 
     letter-spacing: 1px;
