--- a/css_file/map.css
+++ b/css_file/map.css
@@ -23,12 +23,17 @@ header{
     padding-right: 70px;
 }
 
+input{
+    color: #ffffff;
+}
+
 main{
     padding-top:50px;
 }
 
 .info_statistic1{
-    width: 100px; 
+    width: 148px; 
+    height: 226px;
     padding: 20px;
     border-radius: 10px; 
     box-shadow: 0 4px 16px #ccc;
@@ -37,21 +42,22 @@ main{
 }
 .data{
     font-weight: lighter;
-    padding-top: 15px;
+    padding-top: 10px;
+    font-size: 14px;
 }
 
 .info_statistic2{
-    width: 300px; 
+    width: 232px; 
     padding: 20px;
     border-radius: 10px; 
     box-shadow: 0 4px 16px #ccc;
     letter-spacing: 1px; 
     background-color: #1b59b6d8;
-    margin-left: 30px;
+    margin-left: 20px;
 }
 
 .container{
-    width: 450px; 
+    width: 432px; 
     padding: 32px;
     border-radius: 10px; 
     box-shadow: 0 4px 16px #ccc;
@@ -61,6 +67,7 @@ main{
 
 .container2{
     width: 450px; 
+    height: 267px;
     padding: 32px;
     border-radius: 10px; 
     box-shadow: 0 4px 16px #ccc;
@@ -96,16 +103,16 @@ main{
 }
 
 .form_statistic{
-    width: 180px;
     text-align: center;
 }
 
 #map-view{
-    margin-right: 100px;
+    margin-right: 80px;
 }
 
 #map-view2{
-    margin-right: 50px;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
 .ya_map {
@@ -115,8 +122,8 @@ main{
 }
  
 #map {
-	width: 650px;
-	height: 450px;
+	width: 700px;
+	height: 432px;
 }
 
 .statistic_title{
@@ -163,8 +170,8 @@ main{
     background: linear-gradient(to left, #fe7701, #1565C0,#fe7701);
     background-size: 200%;
     cursor: pointer; 
-    margin-left: 38px;
     transition: 0.5s;
+    margin-left: 20px;
 }
 
 #btn_search:hover{
@@ -178,6 +185,7 @@ main{
     border-bottom: 1px solid #e0e0e0;
     background-color: transparent; 
     outline: none;
+    
 }
 
 .form-control:focus {
@@ -190,7 +198,7 @@ main{
     width: 315px;
     border: 10px;
     height: 30px;
-    margin-top: 10px;
+    margin-top: 30px;
     color: white;
     background-color: #1565C0;
     border-color: white;
@@ -203,7 +211,7 @@ main{
     letter-spacing: 1px;
     font-size: 16px;
     color :#fff ; 
-    background: linear-gradient(to left, #ff7571, #1565C0,#ff7571);
+    background: linear-gradient(to left, #fe7701, #1565C0,#fe7701);
     background-size: 200%;
     cursor: pointer; 
     margin-left: 12px;
@@ -227,7 +235,6 @@ main{
     text-align: center;
     padding-top: 50px;
     border-radius: 10px;
-    background-image: url(/picture/лапка_котика.gif);
     background-size: 20%;
     background-repeat: no-repeat;
     background-position-x: right;
@@ -247,7 +254,6 @@ main{
     text-align: center;
     padding-top: 50px;
     border-radius: 10px;
-    background-image: url(/picture/лапка_котика.gif);
     background-size: 20%;
     background-repeat: no-repeat;
     background-position-x: right;
@@ -256,13 +262,13 @@ main{
 
 #modal_about{
     width: 400px;
-    height:330px;
+    height:380px;
     padding: 30px;
     border:solid 2px #ffffff;
     background-color: #4d7abd;
     color: rgb(255, 255, 255);
     position:absolute; 
-    left:530px; 
+    left:800px; 
     top:100px;
     text-align: left;
     padding-top: 20px;
@@ -277,13 +283,13 @@ main{
 
 .btn_modal, #btn_year{
     padding: 10px 20px;
-    margin-top: 30px;
+    margin-top: 10px;
     border: none; 
     border-radius: 5px; 
     letter-spacing: 1px;
     font-size: 16px;
     color :#fff ; 
-    background: linear-gradient(to left, #ff7571, #1565C0,#ff7571);
+    background: linear-gradient(to left, #fe7701, #1565C0,#fe7701);
     background-size: 200%;
     cursor: pointer; 
     transition: 0.5s;
